@@ -252,7 +252,7 @@ public class EtapaaccessController extends Controller {
 													.all();
 			
 			list = list.stream().collect(Collectors.groupingBy(task->task.getProcessName() + "" + task.getTaskName()))
-				.values().stream().map(m->m.get(0)).collect(Collectors.toList()); // Eliminar Duplicatas 
+				.values().stream().map(m->m.get(0)).toList(); // Eliminar Duplicatas 
 			
 			list.stream().forEach(task->{
 				Table_1 t = new Table_1();
@@ -277,7 +277,7 @@ public class EtapaaccessController extends Controller {
 			List<TaskAccess> list = new TaskAccess().find()
 													.andWhere("organization", "=",prof.getOrganization().getId())
 													.andWhere("profileType","=", prof.getId())
-													.andWhere("profileType", "isnotnull")
+													.andWhereNotNull("profileType")
 													.all();
 			list.stream().forEach(task->{
 				Table_1 t = new Table_1();
@@ -299,7 +299,7 @@ public class EtapaaccessController extends Controller {
 		return new TaskAccess().find()
 				.andWhere("organization", "=",id)
 				.andWhere("processName", "=",proccessName)
-				.andWhere("profileType", "isnull")
+				.andWhereIsNull("profileType")
 				.all() ;
 	}
 	
